Just added Equal Fold Angle constraint.

--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -118,14 +118,16 @@
     <Compile Include="Components\Inputs\CMeshFromMesh.cs" />
     <Compile Include="Components\Inputs\CMeshFromMVLines.cs" />
     <Compile Include="Components\Inputs\CMeshFromMVTLines.cs" />
-    <Compile Include="Components\Patterns\HuffmanExtrudedBoxesOnDoubleSurfaceComponent.cs" />
-    <Compile Include="Components\Patterns\HuffmanRectWeaveOnDoubleSurfaceComponent.cs" />
-    <Compile Include="Components\Patterns\HuffmanWaterbombsOnDoubleSurfaceComponent.cs" />
-    <Compile Include="Components\Patterns\MiuraFoldingOnDoubleSurfaceComponent2.cs" />
-    <Compile Include="Components\Patterns\HuffmanStarsTrianglesOnDoubleSurfaceComponent.cs" />
-    <Compile Include="Components\Patterns\HuffmanExtendedBoxesOnDoubleSurfaceComponent.cs" />
-    <Compile Include="Components\Patterns\TuckOrigamize.cs" />
-    <Compile Include="Components\Patterns\WaterbombOnDoubleSurfaceComponent2.cs" />
+    <Compile Include="Components\Patterns\OnSurface\HuffmanExtrudedBoxesOnDoubleSurfaceComponent.cs" />
+    <Compile Include="Components\Patterns\OnSurface\HuffmanRectWeaveOnDoubleSurfaceComponent.cs" />
+    <Compile Include="Components\Patterns\OnSurface\HuffmanWaterbombsOnDoubleSurfaceComponent.cs" />
+    <Compile Include="Components\Patterns\CreasePattern\MiuraFoldingComponent.cs" />
+    <Compile Include="Components\Patterns\OnSurface\MiuraFoldingOnDoubleSurfaceComponent2.cs" />
+    <Compile Include="Components\Patterns\OnSurface\HuffmanStarsTrianglesOnDoubleSurfaceComponent.cs" />
+    <Compile Include="Components\Patterns\OnSurface\HuffmanExtendedBoxesOnDoubleSurfaceComponent.cs" />
+    <Compile Include="Components\Patterns\Origamize\TuckOrigamize.cs" />
+    <Compile Include="Components\Patterns\OnSurface\WaterbombOnDoubleSurfaceComponent2.cs" />
+    <Compile Include="Components\Patterns\CreasePattern\YoshimuraFoldingComponent.cs" />
     <Compile Include="Components\Solver\CraneAsyncSolver.cs" />
     <Compile Include="Components\Util\DeformationGradientComponent.cs" />
     <Compile Include="Components\Util\IndexPairsForSymmetry.cs" />
@@ -137,13 +139,13 @@
     <Compile Include="Components\Outputs\DevelopCMesh.cs" />
     <Compile Include="Components\Outputs\PlayRecords.cs" />
     <Compile Include="Components\Patterns\ChairComponent.cs" />
-    <Compile Include="Components\Patterns\ChickenWireOnSurfaceComponent.cs" />
+    <Compile Include="Components\Patterns\OnSurface\ChickenWireOnSurfaceComponent.cs" />
     <Compile Include="Components\Patterns\DoublyPeriodicTessellationComponent.cs" />
     <Compile Include="Components\Patterns\MapMiuraParameterComponent.cs" />
-    <Compile Include="Components\Patterns\StarOrigamizeComponent.cs" />
-    <Compile Include="Components\Patterns\TruncatedStarOrigamizeComponent.cs" />
-    <Compile Include="Components\Patterns\TwistOrigamizeComponent.cs" />
-    <Compile Include="Components\Patterns\YoshimuraPatternOnSurfaceComponent.cs" />
+    <Compile Include="Components\Patterns\Origamize\StarOrigamizeComponent.cs" />
+    <Compile Include="Components\Patterns\Origamize\TruncatedStarOrigamizeComponent.cs" />
+    <Compile Include="Components\Patterns\Origamize\TwistOrigamizeComponent.cs" />
+    <Compile Include="Components\Patterns\OnSurface\YoshimuraPatternOnSurfaceComponent.cs" />
     <Compile Include="Components\Solver\CraneInteractiveSolver.cs" />
     <Compile Include="Components\Solver\CraneStaticSolver.cs" />
     <Compile Include="Components\Solver\SolutionSpaceDOF.cs" />
@@ -186,6 +188,8 @@
     <Compile Include="Misc\MapMiuraParameter.cs" />
     <Compile Include="Misc\ScaleRotation.cs" />
     <Compile Include="Patterns\Chair.cs" />
+    <Compile Include="Patterns\CreasePattern\CreasePattern.cs" />
+    <Compile Include="Patterns\CreasePattern\CreasePatternParam.cs" />
     <Compile Include="Patterns\TessellationOnSurface\ChickenWireOnSurface.cs" />
     <Compile Include="Constraints\Anchor.cs" />
     <Compile Include="Constraints\AnchorToGround.cs" />
