added Constraints test.

--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -81,13 +81,18 @@
     <Compile Include="Components\Constraints\Equal\EqualEdgeLengthSumComponent.cs" />
     <Compile Include="Components\Constraints\Equal\EqualFoldAngleComponent.cs" />
     <Compile Include="Components\Constraints\Equal\EqualSectorAngleComponent.cs" />
+    <Compile Include="Components\Constraints\Equal\EqualSingulaValue.cs" />
+    <Compile Include="Components\Constraints\Equal\EqualSVDirectionComponent.cs" />
     <Compile Include="Components\Constraints\Fix\FixAreaComponent.cs" />
     <Compile Include="Components\Constraints\Fix\FixAreaSumComponent.cs" />
     <Compile Include="Components\Constraints\Fix\FixBoundarySectorAngleComponent.cs" />
     <Compile Include="Components\Constraints\Fix\FixBoundarySectorAngleSumComponent.cs" />
+    <Compile Include="Components\Constraints\Fix\FixDeformationComponent.cs" />
     <Compile Include="Components\Constraints\Fix\FixEdgeLengthShorterLongerComponent.cs" />
     <Compile Include="Components\Constraints\Fix\FixFaceNormalConponent.cs" />
     <Compile Include="Components\Constraints\Fix\FixMountainValley180FoldComponent.cs" />
+    <Compile Include="Components\Constraints\Fix\FixSingularValueComponent.cs" />
+    <Compile Include="Components\Constraints\Fix\FixSVDirectionComponent.cs" />
     <Compile Include="Components\Constraints\Glue\GlueVertexToFaceComponent.cs" />
     <Compile Include="Components\Constraints\Origami\DevelopableComponent.cs" />
     <Compile Include="Components\Constraints\Equal\EqualEdgeLengthComponent.cs" />
@@ -99,8 +104,10 @@
     <Compile Include="Components\Constraints\Glue\GlueVertexToEdgeComponent.cs" />
     <Compile Include="Components\Constraints\Glue\GlueVerticesComponent.cs" />
     <Compile Include="Components\Constraints\Origami\HoleDevelopableComponent.cs" />
+    <Compile Include="Components\Constraints\SetMinMax\SetMaxSingularValueComponent.cs" />
     <Compile Include="Components\Constraints\SetMinMax\SetMinEdgeLengthComponent.cs" />
     <Compile Include="Components\Constraints\SetMinMax\SetMinSectorAngleComponent.cs" />
+    <Compile Include="Components\Constraints\SetMinMax\SetMinSingularValueComponent.cs" />
     <Compile Include="Components\Constraints\Symmetry\MirrorSymmetryComponent.cs" />
     <Compile Include="Components\Constraints\Origami\MountainOnlyFlatFoldableComponent.cs" />
     <Compile Include="Components\Constraints\OnGeometry\OnCurveComponent.cs" />
@@ -157,14 +164,20 @@
     <Compile Include="Components\Outputs\WriteFoldFormat.cs" />
     <Compile Include="Components\Util\UnWeldMeshAlongPolylines.cs" />
     <Compile Include="Constraints\AlignNormal.cs" />
+    <Compile Include="Constraints\AlignSingularDirections_2dOnly.cs" />
     <Compile Include="Constraints\EqualBoundarySectorAngle.cs" />
     <Compile Include="Constraints\EqualEdgeLengthSum.cs" />
     <Compile Include="Constraints\EqualFoldAngle.cs" />
     <Compile Include="Constraints\EqualSectorAngle.cs" />
+    <Compile Include="Constraints\EqualSingularValue.cs" />
+    <Compile Include="Constraints\EqualSingularValueDirection.cs" />
     <Compile Include="Constraints\FixArea.cs" />
     <Compile Include="Constraints\FixAreaSum.cs" />
     <Compile Include="Constraints\FixBoundarySectorAngle.cs" />
     <Compile Include="Constraints\FixBoundarySectorAngleSum.cs" />
+    <Compile Include="Constraints\FixDeformation.cs" />
+    <Compile Include="Constraints\FixSingularValue.cs" />
+    <Compile Include="Constraints\FixSVDirection.cs" />
     <Compile Include="Constraints\GlueVertexToEdge2.cs" />
     <Compile Include="Constraints\GlueVertices2.cs" />
     <Compile Include="Constraints\HoleAngleDevelopable.cs" />
@@ -175,6 +188,8 @@
     <Compile Include="Constraints\SetMaxFoldAngle.cs" />
     <Compile Include="Constraints\SetMinEdgeLength.cs" />
     <Compile Include="Constraints\SetMinSectorAngle.cs" />
+    <Compile Include="Constraints\SetMaxSingularValue.cs" />
+    <Compile Include="Constraints\SetMinSingularValue.cs" />
     <Compile Include="Constraints\ValleyOnlyFlatFoldable.cs" />
     <Compile Include="Core\FabMesh.cs" />
     <Compile Include="Core\FoldFormat.cs" />
