--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -70,7 +70,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -138,7 +137,6 @@
     <Compile Include="Components\Solver\CraneAsyncSolver.cs" />
     <Compile Include="Components\Util\DeformationGradientComponent.cs" />
     <Compile Include="Components\Util\IndexPairsForSymmetry.cs" />
-    <Compile Include="Components\Inputs\PaperMesh.cs" />
     <Compile Include="Components\Util\Approx2dSymmetryComponent.cs" />
     <Compile Include="Components\Util\CalculateCommutativeTransformComponent.cs" />
     <Compile Include="Components\Util\ScaleRotationComponent.cs" />
@@ -282,20 +280,17 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FSharp.Core">
-      <Version>5.0.2</Version>
+    <PackageReference Include="Eto.Forms">
+      <Version>2.9.0</Version>
     </PackageReference>
     <PackageReference Include="MathNet.Numerics">
-      <Version>5.0.0-alpha02</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
-    <PackageReference Include="OpenCvSharp-AnyCPU">
-      <Version>2.4.10.20170306</Version>
+    <PackageReference Include="QuikGraph">
+      <Version>2.5.0</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
-      <Version>6.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="YC.QuickGraph">
-      <Version>3.7.4</Version>
+      <Version>9.0.4</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
