--- a/Crane/Crane.csproj
+++ b/Crane/Crane.csproj
@@ -60,9 +60,6 @@
       <HintPath>..\..\..\..\..\..\Program Files\Rhino 7\Plug-ins\Grasshopper\Grasshopper.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="GrasshopperAsyncComponent">
-      <HintPath>dll\GrasshopperAsyncComponent.dll</HintPath>
-    </Reference>
     <Reference Include="RhinoCommon">
       <HintPath>..\..\..\..\..\..\Program Files\Rhino 7\System\RhinoCommon.dll</HintPath>
       <Private>False</Private>
@@ -282,6 +279,9 @@
   <ItemGroup>
     <PackageReference Include="Eto.Forms">
       <Version>2.9.0</Version>
+    </PackageReference>
+    <PackageReference Include="GrasshopperAsyncComponent">
+      <Version>1.2.3</Version>
     </PackageReference>
     <PackageReference Include="MathNet.Numerics">
       <Version>5.0.0</Version>
